--- a/public/css/default.css
+++ b/public/css/default.css
@@ -176,7 +176,8 @@ p img { margin: auto; }
 p.lead {
    font: 19px/36px 'opensans-light', sans-serif;
    margin: auto;
-   text-align: center;
+   /* text-align: center; */
+   height: 140px;
 }
 
 /* for 'em' and 'strong' tags, font-size and line-height should be same with
