--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -50,9 +50,9 @@
    /* About Section
    ------------------------------------------------------------------- */
    #about .profile-pic {
-      width: 114px;
+      /* width: 114px;
       height: 114px;
-      margin-left: 12px;
+      margin-left: 12px; */
    }
    #about .contact-details { width: 50%; }
    #about .download { width: 50%; }
