--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -481,7 +481,6 @@ ul#nav li a:hover {
 /* Portfolio Content */
 #portfolio-wrapper {
    text-align: center;
-
 }
 
 #portfolio-wrapper .columns {
@@ -555,12 +554,12 @@ ul#nav li a:hover {
     padding: 18px;
 }
 .portfolio-item .portfolio-item-meta h5 {
-    font: 14px/21px 'opensans-bold', sans-serif;
+    font: 1.6rem 'opensans-bold', sans-serif;
     color: #fff;
 }
 .portfolio-item .portfolio-item-meta p {
-    font: 12px/18px 'opensans-light', sans-serif;
-    color: #c6c7c7;
+    font: 1.5rem 'opensans-light', sans-serif;
+    color: #fff;
     margin-bottom: 0;
 }
 
