--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -234,11 +234,12 @@ ul#nav li a:hover {
 }
 
 #about h2 {
-    font: 22px/30px 'opensans-bold', sans-serif;
+    font: 3.2rem 'opensans-bold', sans-serif;
     color: #fff;
     margin-bottom: 12px;
 }
 #about p {
+   font-size: 1.7rem;
     line-height: 30px;
     color: rgba(255, 255, 255, 0.8);
 }
@@ -331,6 +332,7 @@ ul#nav li a:hover {
 
 #resume .work-descriptions {
     color: black;
+    font-size: 1.55rem;
 }
 
 /*----------------------------------------------*/
@@ -488,7 +490,7 @@ ul#nav li a:hover {
     overflow: hidden;
     position: relative;
     display: inline-block;
-
+   border: 1px solid white;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
@@ -674,21 +676,35 @@ ul#nav li a:hover {
     letter-spacing: 3px;
     color: #fff;
 }
-#testimonials h1 span {
-    display: none;
+
+#testimonials h2 {
+   font: 3rem 'opensans-bold', sans-serif;
+   text-transform: uppercase;
+   letter-spacing: 3px;
+   color: #fff;
+   text-align: center;
+   padding-bottom: 4rem;
 }
-#testimonials .header-col {
-    padding-top: 9px;
-}
+
 #testimonials .header-col h1:before {
     font-family: 'FontAwesome';
     content: '\f10d';
-    padding-right: 10px;
-    font-size: 72px;
-    line-height: 72px;
-    text-align: left;
-    float: left;
+    font-size: 30px;
+    line-height: 30px;
     color: #fff;
+}
+
+#testimonials .header-col h2:before {
+   font-family: 'FontAwesome';
+   content: '\f10e';
+   font-size: 30px;
+   line-height: 30px;
+   float: right;
+   color: #fff;
+}
+
+#testimonials .header-col p {
+   padding: 1rem;
 }
 
 /*	Blockquotes */
@@ -703,19 +719,21 @@ ul#nav li a:hover {
 }
 #testimonials blockquote p {
     font-family: 'librebaskerville-italic', serif;
-    padding: 0;
-    font-size: 24px;
-    line-height: 48px;
+    padding: 0 8rem;
+    font-size: 2.8rem;
+    line-height: 6rem;
     color: #fff;
 }
 #testimonials blockquote cite {
-   margin-top: 1.8rem;
+   margin-top: 3rem;
     display: block;
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-style: normal;
     font-weight: 600;
     line-height: 18px;
     color: #fff;
+    position: relative;
+    left: 8rem;
 }
 
 #testimonials blockquote span {
@@ -817,6 +835,13 @@ ul#nav li a:hover {
     zoom: 1;
     *display: inline;
 }
+
+.flex-control-paging {
+   position: relative;
+   left: 7.2rem;
+   margin: 0;
+}
+
 .flex-control-paging li a {
     width: 12px;
     height: 12px;
