--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -902,13 +902,14 @@ ul#nav li a:hover {
 
 #contact .icon-container {
     display: inline-flex;
-    margin-top: 8rem;
+    margin-top: 5rem;
+    padding: 2rem;
 }
 
 #contact h1:before {
     font-family: 'FontAwesome';
     content: '\f0e0';
-    font-size: 8rem;
+    font-size: 6rem;
     color: #ebeeee;
     margin-right: 3rem;
 }
@@ -916,19 +917,19 @@ ul#nav li a:hover {
 #contact h2:before {
     font-family: 'FontAwesome';
     content: '\f095';
-    font-size: 8rem;
+    font-size: 6rem;
     color: #ebeeee;
     margin-left: 3rem;
 }
 
 #contact h4 {
-    font: 5rem 'opensans-bold', sans-serif;
+    font: 3rem 'opensans-bold', sans-serif;
     color: #ebeeee;
     margin-bottom: 2rem;
 }
 #contact p.lead {
     color: white;
-    font: 2rem 'opensans-light', sans-serif;
+    font: 1.6rem 'opensans-light', sans-serif;
 }
 #contact .header-col {
     padding-top: 6px;
@@ -936,8 +937,8 @@ ul#nav li a:hover {
 
 #contact .contact-info {
     text-align: center;
-    padding: 5rem;
-    font-size: 2rem;
+    padding: 3rem;
+    font-size: 1.6rem;
 }
 
 .form {
@@ -953,14 +954,14 @@ ul#nav li a:hover {
 #contact input,
 #contact textarea,
 #contact select {
-    padding: 20px;
-    color: rgb(18, 119, 122);
+    padding: 1rem;
+    /* color: rgb(18, 119, 122); */
     background: #fff;
-    margin-bottom: 42px;
+    margin-bottom: 1rem;
     border: 0;
     outline: none;
-    font-size: 15px;
-    line-height: 24px;
+    font-size: 1.5rem;
+    line-height: 1rem;
     width: 35%;
 }
 
