--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -46,11 +46,6 @@
 
     /* About Section
    ------------------------------------------------------------------- */
-    #about .profile-pic {
-        /* width: 114px;
-      height: 114px;
-      margin-left: 12px; */
-    }
     #about .contact-details {
         width: 50%;
     }
@@ -128,7 +123,6 @@
 
         position: relative;
         top: 0px;
-        right: 30px;
     }
 
     #nav-wrap > a:before,
@@ -158,7 +152,6 @@
         width: auto;
         float: right;
 
-        position: relative;
         top: 12px;
         right: 0;
     }
@@ -168,7 +161,7 @@
         display: block;
         padding: 30px 20px 48px 20px;
         background: #1f2024;
-        margin: 0 30px;
+        /* margin: 0 30px; */
         clear: both;
     }
 
@@ -217,11 +210,6 @@
     }
     header .social li {
         margin: 0 10px;
-    }
-
-    /* scrolldown link */
-    header .scrolldown {
-        display: none;
     }
 
     /* About Section
@@ -439,7 +427,7 @@
    -------------------------------------------------------------------- */
     #nav-wrap ul#nav {
         width: auto;
-        float: none;
+        /* float: none; */
     }
 
     /* header styles
