--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -64,11 +64,10 @@
 
     /* Testimonials Section
    ------------------------------------------------------------------- */
-  
+
     #testimonials blockquote p {
         font-size: 22px;
     }
-
 
     /* Call to Action Section
    ------------------------------------------------------------------- */
@@ -290,13 +289,13 @@
     #testimonials h1 span {
         display: block;
     }
-    #testimonials .header-col h1:before  {
+    #testimonials .header-col h1:before {
         content: none;
     }
 
-    #testimonials .header-col h2:before  {
-      content: none;
-  }
+    #testimonials .header-col h2:before {
+        content: none;
+    }
 
     #testimonials blockquote {
         padding-bottom: 24px;
@@ -307,11 +306,11 @@
     }
 
     #testimonials blockquote cite {
-       margin:0;
-       left:0;
-      font-size: 1.6rem;
-      line-height: 3.5rem;
-  }
+        margin: 0;
+        left: 0;
+        font-size: 1.6rem;
+        line-height: 3.5rem;
+    }
 
     /* Control Nav */
     .flex-control-nav {
@@ -320,9 +319,9 @@
     }
 
     .flex-control-paging {
-       /* right:0; */
-       margin:0;
-       left:0;
+        /* right:0; */
+        margin: 0;
+        left: 0;
     }
 
     /* contact Section
@@ -355,12 +354,12 @@
     /* form */
 
     #contact form {
-      padding: 3rem;
-  }
+        padding: 3rem;
+    }
 
-  #contact p.lead {
-   padding: 1rem;
-  }
+    #contact p.lead {
+        padding: 1rem;
+    }
 
     #contact label {
         float: none;
@@ -431,18 +430,65 @@
     header .banner-text h1 {
         font: 40px/1.1em 'opensans-bold', sans-serif;
         margin: 0 auto 24px auto;
+        position: absolute;
+        width: 349px;
+        height: 392px;
+        left: -10px;
+        top: 186px;
+        color: lightgray;
+        opacity: .45;
+        /* color:lightgrey; */
+    }
+
+    header .banner-text h2 {
+        position: absolute;
+        width: 251px;
+        height: 86px;
+        left: 55px;
+        top: 280px;
+
+        font-family: 'Lato', sans-serif;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 72px;
+        line-height: 86px;
+
+        color: #000000;
     }
     header .banner-text h3 {
+        /* z-index: 1;
         font: 14px/1.9em 'librebaskerville-regular', sans-serif;
-        width: 90%;
+        width: 90%; */
+        position: absolute;
+        width: 269px;
+        height: 29px;
+        left: 53px;
+        top: 380px;
+        
+        font-family: 'Lato', sans-serif;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 29px;
+        /* identical to box height */
+        
+        letter-spacing: 0.165em;
+        
+        color: #000000;
     }
 
     /* header social links */
     header .social {
         font-size: 20px;
+        display:none;
     }
     header .social li {
         margin: 0 6px;
+        display:none;
+    }
+
+    header hr {
+        display:none;
     }
 
     /* footer
