--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -179,14 +179,12 @@ ul#nav li {
 
 /* Links */
 ul#nav li a {
-    /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
-
     display: inline-block;
     padding: 8px 13px;
     line-height: 32px;
     text-decoration: none;
     text-align: right;
-    color: #fff;
+    color: lightgray;
     display: inline-block;
     -webkit-transition: color 0.2s ease-in-out;
     -moz-transition: color 0.2s ease-in-out;
@@ -200,12 +198,12 @@ ul#nav li a:active {
 }
 
 ul#nav li.current a {
-    color: #f06000;
-    border-bottom: 0.2rem solid #f06000;
+    color: black;
 }
 
 ul#nav li a:hover {
-    color: #f06000;
+    color: black;
+
 }
 
 @media only screen and (max-width: 800px) {
