--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -110,7 +110,6 @@
         width: 48px;
         height: 48px;
         text-align: left;
-        background-color: #cc5200;
         position: relative;
         border: none;
         float: right;
@@ -126,7 +125,7 @@
     #nav-wrap > a:before,
     #nav-wrap > a:after {
         position: absolute;
-        border: 2px solid #fff;
+        border: 2px solid black;
         top: 35%;
         left: 25%;
         right: 25%;
@@ -149,28 +148,25 @@
         clear: both;
         width: auto;
         float: right;
-
         top: 12px;
         right: 0;
     }
 
     /* display menu panels */
     #nav-wrap:target > ul#nav {
+        font-family: 'Open Sans';
         display: block;
-        padding: 30px 20px 48px 20px;
-        background: #1f2024;
-        /* margin: 0 30px; */
+        padding: 1rem;
+        background: white;
+        border:1px solid black;
         clear: both;
+        font-size: 1.5rem;
     }
 
     ul#nav li {
         display: block;
         height: auto;
-        margin: 0 auto;
-        padding: 0 4%;
-        text-align: left;
-        border-bottom: 1px solid #2d2e34;
-        border-bottom-style: dotted;
+        padding: 1rem;
     }
 
     ul#nav li a {
